<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignUpActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="8dp">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_app"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="MissingConstraints"
        android:gravity="center"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="30dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/header_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/box_login_singup"
                    android:paddingVertical="40dp"
                    android:paddingHorizontal="20dp">
                    <TextView
                        android:id="@+id/register_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_title"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:paddingBottom="10dp"/>
                    <TextView
                        android:id="@+id/register_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_subtitle"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/header_signup"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/register_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register_nombre"
                            android:textSize="14sp"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold"
                            />
                        <EditText
                            android:id="@+id/register_name_input"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/register_name_holder"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/box_input_text"
                            android:paddingHorizontal="10dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/register_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_email"
                            android:textSize="14sp"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold"
                            />
                        <EditText
                            android:id="@+id/register_email_input"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/placeholder_email"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/box_input_text"
                            android:paddingHorizontal="10dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/register_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_password"
                            android:textSize="14sp"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold"/>
                        <EditText
                            android:id="@+id/register_password_input"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@null"
                            android:inputType="textPassword"
                            android:background="@drawable/box_input_text"
                            android:paddingHorizontal="10dp"/>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="44dp"
                        android:paddingHorizontal="90dp"
                        android:background="@drawable/btn_gradient_purple_pink"
                        android:drawableStart="@drawable/person_add_24px"
                        android:text="@string/btn_register_title"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textAllCaps="false"
                        android:gravity="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:id="@+id/resgister_if_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/if_account"
                            />
                        <TextView
                            android:id="@+id/resgister_link_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/link_login"
                            android:textStyle="bold"
                            android:textColor="@color/primary_purple"
                            android:layout_marginStart="5dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>